# vlm-sam-industrial-vision-v2

./: .gitignore  CLAUDE.md  Phase 3.7：前端视觉精修 — 对齐 V2 设计稿.md  Phase 3.8：功能完整性验证 + 旧组件清理.md  pyproject.toml  qwen3vl_lora.yaml  qwen3vl_lora_4b.yaml
.claude/agents/: visual-verify.md
.claude/skills/rk3588-deployment/: SKILL.md
backend/app/: db.py  main.py
backend/app/models/: __init__.py  defect.py
backend/app/routers/: defects.py  edge.py  health.py  stats.py  ws.py
backend/app/schemas/: defect.py
backend/app/ws/: manager.py
design-reference/: Industrial Vision Dashboard v2.html
design-reference/src/: data.jsx  v2-ab.jsx  v2-app.jsx  v2-charts.jsx  v2-detail.jsx  v2-primitives.jsx  v2-stream.jsx  v2-waterfall.jsx
docs/: API_CONTRACT.md  ARCHITECTURE.md  PROJECT_TIMELINE.md
docs/experiments/: phase5_6_deployment_benchmark_report.md  phase5_7_method_control_benchmark_report.md  phase5_8_opro_baseline_report.md  phase5_efficientad_15cls_results.md  phase5_future_improvements.md  phase5_method_matrix.md
edge/: config.yaml
edge/src/: vlm_bbox_ref.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx  (+2 more)
logs/: train_efficientad_full_15cls简易版.txt
scripts/: convert_efficientad_rknn.py  convert_fastsam.py  convert_fastsam_onnx.py  convert_fastsam_rknn.py  defect_group_analysis.py  eval_ab_test.py  format_llama_factory_data.py  lora_diff_analysis.py  mvtec_mask_to_json.py  optimize_prompt_opro.py  plot_phase5_results.py  split_lora_data.py  train_efficientad.py  truncated_2b_lora.txt  truncated_4b_lora.txt
simulator/: line_runner.py
(+53 files in other folders)
